<resources>
    <!-- Main Activity -->
    <string name="app_name">Account Safe</string>
    <string name="action_search">Search accounts</string>
    <string name="action_safe">Lock accounts</string>
    <string name="action_settings">Settings</string>
    <string name="action_reconnect">Reconnect </string>
    <string name="ListviewEmptyMessage">No accounts added</string>
    <string name="message_wait_encryption">Please wait for encryption</string>

    <!-- Popups -->
    <string name="popup_add">Please add your first account</string>
    <string name="popup_lock">Click to call Safe Lock application on your Gear device to lock all your added accounts</string>
    <string name="popup_unlock">Click to call Safe Lock application on your Gear device to unlock one account for some time</string>

    <!-- Gear connection -->
    <string name="gear_waiting">Waiting for Safe Lock</string>
    <string name="gear_ready">Gear Ready</string>
    <string name="gear_waiting_connection">Connecting to Gear. Please wait...</string>
    <string name="gear_waiting_message">Please enter current safe key to your Gear after ...</string>
    <string name="gear_waiting_message_new">Next, please enter new safe key to your Gear ...</string>
    <string name="gear_not_connected">Gear device not connected</string>
    <string name="gear_send_error">Failed to send data to Gear device</string>
    <string name="safe_lock_app_not_available">Safe Lock application not available</string>
    <string name="safe_lock_app_available">Safe Lock application available</string>
    <string name="safe_lock_app_closed">Safe Lock application has been closed</string>
    <string name="accessory_vendor_not_supported">Vendor not supported</string>
    <string name="accessory_device_not_found">Gear device not found</string>
    <string name="accessory_install_sdk">You need to install Samsung Accessory SDK to use this application</string>
    <string name="accessory_update_required_sdk">You need to update Samsung Accessory SDK to use this application</string>
    <string name="accessory_update_recommended_sdk">We recommend that you update your Samsung Accessory SDK before using this application</string>
    <string name="no_message"></string>

    <!-- Add activity -->
    <string name="activity_add_title">Add Account</string>
    <string name="account_name_hint">Account title</string>
    <string name="account_login_hint">Login (Optional)</string>
    <string name="account_password_hint">Password</string>
    <string name="account_repassword_hint">Confirm password</string>
    <string name="submit_add_button_text">Add Account</string>

    <string name="error_incorrect_repassword">Password doesn\'t match</string>
    <string name="error_field_required">This field is required</string>

    <!-- Reorder title -->
    <string name="activity_reorder_title">Edit/Reorder</string>
    <string name="action_sort_ascending">Ascending sort</string>
    <string name="action_sort_descending">Descending sort</string>
    <string name="action_remove_sure">Are you sure want to remove?</string>

    <!-- Edit -->
    <string name="activity_edit_title">Edit Account</string>
    <string name="submit_edit_button_text">Edit Account</string>

    <!-- SnakeBar + Toast -->
    <string name="snake_copied">Copied to clipboard for short time</string>
    <string name="snake_wrong_key">Wrong safe key was inputted</string>
    <string name="snake_wrong_key_empty">Empty safe key not allowed</string>
    <string name="snake_no_account_to_lock">No accounts to lock</string>
    <string name="snake_no_account_locked">No accounts are locked</string>

    <string name="snake_successfully_enc">%s accounts was locked</string>
    <string name="snake_failed_reenc">Error occurred on changing safe key</string>

    <!-- Change key -->
    <string name="action_changekey">Change safe key</string>

    <!-- About -->
    <string name="action_about">About</string>
    <string name="about_title_1">One master password</string>
    <string name="about_content_1">Keep in mind only one master password (safe key) to access you accounts. Your key is also linked to your Gear device id.</string>
    <string name="about_title_2">Encryption</string>
    <string name="about_content_2">Used Advanced Encryption Standard (AES) with 256-bit key to protect your logins and passwords.</string>
    <string name="about_title_3">Clipboard auto-clearing</string>
    <string name="about_content_3">Copied login or password would be automatically removed from clipboard after some time.</string>
    <string name="about_title_4">Safe Lock</string>
    <string name="about_content_4_1">Safe Lock - is application on your Gear device to input key.</string>
    <string name="about_content_4_2"> - Rotate bezel to correct number.</string>
    <string name="about_content_4_3"> - Press in the middle of screen to pick number.</string>
    <string name="about_content_4_4"> - Long press in the middle of screen to erase previous number.</string>
    <string name="about_content_4_5"> - Press back or home button to send key to phone and exit.</string>
    <string name="about_title_5">Database location</string>
    <string name="about_content_5">You can copy database to another phone from location:\nDevice Storage/AccountSafe/AccountSafe.db</string>

</resources>
