<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pillows.accountsafe.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dip"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_1"
                android:textColor="@color/colorAccent"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_1"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_2"
                android:textColor="@color/colorAccent"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_2"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_3"
                android:textColor="@color/colorAccent"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_3"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_4"
                android:textColor="@color/colorAccent"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_4_1"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_4_2"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_4_3"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_4_4"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_4_5"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title_5"
                android:textColor="@color/colorAccent"
                android:padding="2dip"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content_5"
                android:paddingStart="16dp"
                android:padding="2dip"
                android:layout_weight="1"
                />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
